      - New option family 'cupt::downloader::protocols::*::methods'.
      - New option family
        'cupt::downloader::protocols::*::methods::*::priority'.
    - Download:
      - Manager:
        - Sort URIs for the file by priorities.
      - Method:
        - Implemented choosing a method with maximum priority between several
          available ones.

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Mon, 21 Dec 2009 19:29:35 +0200

cupt (1.4.0) unstable; urgency=low

  * Cupt:
    - System:
      - Worker:
        - 'get_unpacked_sizes_preview': fixed a crash when purging the package
          in 'config-files' state but which has installation candidates.
          Thanks to Cyril Brulebois. (Closes: #559340)
      - Resolvers/Native:
        - Fixed the bug when soft dependencies were automatically removed in
          the start of resolving because of disappear of the parent packages
          and then weren't considered to keeping when other parent packages
          hierarchy declared a soft dependency on the package.
        - Apply 'automatically installed' penalty score to all versions of
          automatically installed packages, not only installed one.
        - Don't perform inner auto-removal before of main resolver cycles.
      - Resolvers/External:
        - Request: lowercased all fields.
        - Request: pass '>>' as '>' and '<<' as '<' in relation expressions.
        - Request: added the preable with a 'pin-priority' property
          declaration.
        - Request: 'problem' stanza is renamed to 'request'.
    - Download:
      - Methods/Debdelta:
        - Suppress standard output from debpatch.
    - Config:
      - [API break] 'set_regular_var': renamed to 'set_scalar'.
      - [API break] 'set_list_var': renamed to 'set_list'.
      - [API break] 'var': replaced by new methods 'get_string', 'get_number'
        and 'get_bool'.
    - Core:
      - Moved INIT block out to 'cupt' front-end.
    - Cache: